src/styles/global.css
@import "tailwindcss";
@source "../components/animate-underline/animate-underline.ts";

/* prettier-ignore */
@plugin "@tailwindcss/typography" {
	/* biome-ignore lint/correctness/noUnknownProperty:
	No clue why it does not recognize it is part of Tailwind */
	className: format;
}

@plugin 'tailwind-scrollbar' {
	/* biome-ignore lint/correctness/noUnknownProperty:
	No clue why it does not recognize it is part of Tailwind */
	nocompatible: true;
}

@plugin 'tailwindcss-animate';

@theme {
	--breakpoint-xs: 475px;

	--font-sans: "Figtree";
	--font-montserrat: "Montserrat";
	--font-mono:
		"ui-monospace", "SFMono-Regular", "Menlo", "Monaco", "Consolas",
		"Liberation Mono", "Courier New", "monospace";

	/* easings.net -- https://easings.net/#easeInOutSine */
	--animate-accordion-down: accordion-down 0.2s cubic-bezier(0.37, 0, 0.63, 1);
	--animate-accordion-up: accordion-up 0.2s cubic-bezier(0.37, 0, 0.63, 1);

	@keyframes accordion-down {
		from {
			height: 0;
		}
		to {
			height: var(--bits-accordion-content-height);
		}
	}

	@keyframes accordion-up {
		from {
			height: var(--bits-accordion-content-height);
		}
		to {
			height: 0;
		}
	}
}

@custom-variant aria-current (&[aria-current="true"]);
@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@layer base {
	:root {
		@apply selection:bg-violet-100 selection:text-violet-950 dark:selection:bg-violet-400/10 dark:selection:text-violet-100;
	}

	html {
		scrollbar-gutter: stable;
	}

	h1,
	h2,
	h3,
	h4,
	h5,
	h6 {
		@apply font-montserrat;
	}

	/* Twemoji */
	img.emoji {
		display: inline !important;
		border: none !important;
		box-shadow: none !important;
		height: 1em !important;
		width: 1em !important;
		margin: 0 0.07em !important;
		vertical-align: -0.1em !important;
		background: none !important;
		padding: 0 !important;
		pointer-events: none;
	}

	footer img.emoji {
		vertical-align: -0.275em !important;
	}

	/* SkipLink from accessible-astro-components */
	body .skip-link a {
		@apply rounded bg-violet-50 text-lg font-semibold text-violet-900 ring-violet-900 transition-none outline-none focus-visible:ring-2 dark:bg-gray-800 dark:text-gray-100 dark:ring-gray-50;
	}

	body .skip-link a:focus-visible {
		@apply top-1 left-1;
		outline-offset: 2px;
	}

	body main#main-content {
		@apply outline-none;
	}

	/* Leaflet Map */
	.leaflet-pane {
		z-index: 10 !important;
	}

	.leaflet-top,
	.leaflet-bottom {
		z-index: 30 !important;
	}

	.leaflet-control {
		z-index: 20 !important;
	}

	.leaflet-container {
		z-index: 30 !important;
	}

	/* Workaround for VoiceOver not declaring lists - requires lists to be
		marked as role="list" for this style to be applied, instead of
		applying it to all lists. This is because "ul" can change have its
		styling changed when using `format` (namely with spacing).
		https://gerardkcohen.me/writing/2017/voiceover-list-style-type.html */
	ul[role="list"] li::before {
		content: "\200B"; /* add zero-width space */
		position: absolute;
	}
}

@layer components {
	/* Default styling */
	a,
	button {
		@apply cursor-pointer;
	}

	a,
	button,
	main {
		@apply outline-offset-2 outline-violet-600 focus-visible:outline-2 dark:outline-violet-50;
	}

	/* Article Formatting */
	.format {
		@apply format-code:font-normal format-table:tabular-nums;
	}

	.format figure:not(:where([class~="not-format"], [class~="not-format"] *)) {
		@apply mx-auto;
	}

	.format figure > div.side-by-side-images {
		@apply mx-auto flex justify-center gap-x-4;
	}

	.format figure > div.side-by-side-images > * {
		@apply w-1/2;
	}

	.format figure > div.side-by-side-images picture img {
		@apply my-0;
	}

	/* Custom for the finances article */
	.format .money-table table tbody {
		@apply font-mono;
	}
}

@layer utilities {
	.format {
		@apply format-blockquote:rounded-l;
	}

	.format
		:where(h1):not(:where([class~="not-format"], [class~="not-format"] *)) {
		@apply lg:leading-[1.166666667];
	}

	.format
		:where(h1):not(:where([class~="not-format"], [class~="not-format"] *)),
	.format
		:where(h2):not(:where([class~="not-format"], [class~="not-format"] *)) {
		@apply font-bold;
	}

	.format
		:where(h3):not(:where([class~="not-format"], [class~="not-format"] *)),
	.format
		:where(h4):not(:where([class~="not-format"], [class~="not-format"] *)),
	.format
		:where(h5):not(:where([class~="not-format"], [class~="not-format"] *)),
	.format
		:where(h6):not(:where([class~="not-format"], [class~="not-format"] *)) {
		@apply font-semibold;
	}

	.format
		:where(.table-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		) {
		@apply grid grid-cols-1 overflow-auto whitespace-normal;
	}

	.format
		:where(table):not(:where([class~="not-format"], [class~="not-format"] *)) {
		@apply my-1;
	}

	.format a:not(.not-format) {
		@apply rounded underline outline-violet-600 hover:text-violet-800 focus-visible:outline-2 dark:outline-violet-50 dark:hover:text-violet-300;
	}

	/* Rehype Autolink - Custom styles for heading anchor links. */
	.format .heading-wrapper {
		@apply relative;
		--icon-size: 1em;
		--icon-spacing: 0.25em;
	}

	.format .heading-wrapper > :first-child {
		margin-inline-end: calc(var(--icon-size) + var(--icon-spacing));
		@apply inline-block scroll-mt-[1em];
	}

	.format .heading-wrapper a svg {
		@apply relative inline origin-center -rotate-45;
		width: var(--icon-size);
	}

	.format
		:where(.heading-wrapper.level-h2 + .heading-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		)
		h3,
	.format
		:where(.heading-wrapper.level-h3 + .heading-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		)
		h4 {
		@apply mt-0;
	}

	.format
		figure:has(+ .heading-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		),
	.format
		figure:has(+ .heading-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		)
		figcaption
		p:last-child {
		@apply mb-0;
	}

	.format
		p:has(+ .heading-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		),
	.format
		ul:has(+ .heading-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		),
	.format
		blockquote:has(+ .heading-wrapper):not(
			:where([class~="not-format"], [class~="not-format"] *)
		) {
		@apply mb-0;
	}

	.format .heading-wrapper + figure,
	.format .heading-wrapper + p,
	.format .heading-wrapper + pre,
	.format .heading-wrapper + ul,
	.format .heading-wrapper + div {
		@apply mt-0;
	}

	.format .heading-wrapper.level-h2 a {
		font-size: 1.5em;
	}

	.format .heading-wrapper.level-h3 a {
		font-size: 1.25em;
	}

	.format .heading-wrapper.level-h4 a,
	.format .heading-wrapper.level-h5 a,
	.format .heading-wrapper.level-h6 a {
		font-size: 1em;
	}

	/* Prevent double or triple clicks from potentially selecting the anchor link a11y text. */
	.format .heading-wrapper a .sr-only {
		-webkit-user-select: none;
		user-select: none;
	}

	.format .heading-wrapper a {
		@apply absolute inset-0 m-0 inline text-violet-500 opacity-0 dark:text-violet-300;
	}

	@media (hover: hover) {
		.format .heading-wrapper a {
			@apply relative top-[-.125em] opacity-0;
			margin-inline-start: calc(-1 * (var(--icon-size)));
		}

		.format .heading-wrapper:hover a,
		.format .heading-wrapper a:hover,
		.format .heading-wrapper a:focus-visible {
			@apply no-underline opacity-100;
		}

		.format .heading-wrapper.level-h2 a {
			@apply top-[-.1em];
		}

		.format .heading-wrapper a svg {
			@apply relative bottom-[.05em];
		}
	}

	@media (hover: none) {
		.format .heading-wrapper a:focus-visible {
			@apply no-underline opacity-100;
		}

		.format .heading-wrapper a:focus-visible svg {
			@apply opacity-0;
		}
	}

	.format .heading-wrapper:hover a:hover {
		@apply text-violet-700 saturate-[0.75] dark:text-violet-50;
	}

	/* Callouts */
	&
		.callout:where(.format > :first-child):not(
			:where([class~="not-format"], [class~="not-format"] *)
		) {
		/* For some reason, the ".callout" class overrides the default format behaviour?? */
		@apply !mt-0;
	}

	.callout {
		@apply my-[1.25em] rounded border-l-4 px-5 py-4 outline-none has-[+.heading-wrapper]:mb-0 lg:my-[1.3333333em] lg:py-5;
	}
	.callout[data-callout="info"] {
		@apply border-violet-500 bg-violet-50 marker:text-violet-300 selection:bg-violet-100 selection:text-violet-950 dark:border-violet-300 dark:bg-violet-900/15 dark:selection:bg-violet-900/50 dark:selection:text-violet-50;
	}
	.callout[data-callout="warning"] {
		@apply border-yellow-500 bg-yellow-50 marker:text-yellow-300 selection:bg-yellow-200 selection:text-yellow-900 dark:bg-yellow-900/25 dark:selection:bg-yellow-900/50 dark:selection:text-yellow-50;
	}
	.callout[data-callout="warning"] a {
		@apply hover:text-yellow-800 dark:hover:text-yellow-300;
	}
	.callout[data-callout="caution"] {
		@apply border-red-500 bg-red-50 marker:text-red-300 selection:bg-red-200 selection:text-red-900 dark:bg-red-900/25 dark:selection:bg-red-900/50 dark:selection:text-red-50;
	}
	.callout[data-callout="caution"] a {
		@apply hover:text-red-800 dark:hover:text-red-300;
	}

	.callout .callout-title {
		@apply relative top-[.1em] font-bold;
	}

	.callout[data-callout="info"] .callout-title {
		@apply text-violet-800 dark:text-violet-300;
	}
	.callout[data-callout="warning"] .callout-title {
		@apply text-yellow-800 dark:text-yellow-300;
	}
	.callout[data-callout="caution"] .callout-title {
		@apply text-red-800 dark:text-red-300;
	}

	.callout .callout-content {
		@apply relative dark:text-gray-200 [&>*]:first:mt-1 [&>*]:last:mb-0;
	}

	/* animate-underline custom component handling */
	animate-underline .format a.group\/underline {
		@apply no-underline;
	}

	animate-underline a.group\/underline span {
		/* See https://css-tricks.com/styling-underlines-web/#aa-border-bottom for text-shadow technique */
		@apply text-shadow-[-.0625em_-.0625em,_-.0625em_.0625em,_.0625em_-.0625em,_.0625em_.0625em,0_.0625em];

		/* See https://stackoverflow.com/a/73043524 for animation reference */
		@apply bg-gradient-to-r bg-[length:100%_1px] bg-left-bottom bg-no-repeat transition-[background-size,color,--tw-gradient-from,--tw-gradient-to] ease-out group-hover/underline:bg-[length:85%_1px];

		/* Color styling */
		@apply from-(--tw-prose-links)/75 to-(--tw-prose-links)/75 text-shadow-white group-hover/underline:from-violet-800 group-hover/underline:to-violet-800 selection:text-shadow-none dark:from-(--tw-prose-links) dark:to-(--tw-prose-links) dark:text-shadow-gray-900 dark:group-hover/underline:from-violet-300/50 dark:group-hover/underline:to-violet-300/50;
	}

	animate-underline .callout a.group\/underline span {
		/* Transparent background makes things impossible */
		@apply !text-shadow-none;
		/* Compensating for background making the underline less transparent, by making the color less transparent */
		@apply from-(--tw-prose-links)/50 to-(--tw-prose-links)/50;
		@apply group-hover/underline:from-violet-800/25 group-hover/underline:to-violet-800/25;
		/* ...except for dark mode */
		@apply dark:group-hover/underline:from-violet-300/50 dark:group-hover/underline:to-violet-300/50;
	}

	animate-underline .callout[data-callout="warning"] a.group\/underline span {
		@apply group-hover/underline:from-yellow-800/50 group-hover/underline:to-yellow-800/50 dark:group-hover/underline:from-yellow-300/50 dark:group-hover/underline:to-yellow-300/50;
	}
}

